# mg-exchange-protocol

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  VERSIONING.md
.github/workflows/: ci.yml
bindings/c/: README.md  mgep.c  mgep.h  test_mgep.c
bindings/cpp/: README.md  mgep.hpp  test_mgep.cpp
bindings/csharp/: Mgep.cs  README.md
bindings/java/: README.md
bindings/python/: mgep.py
bindings/typescript/: README.md  package.json
bindings/typescript/src/: mgep.ts
bindings/typescript/test/: mgep.test.ts
conformance/: README.md  new_order_single.json
docs/: BENCHMARKS.md  WHY-NOT-SBE.md
docs/guide/: building-a-terminal.md
docs/research/: 01-protocol-landscape.md
docs/spec/: 01-wire-format.md  02-schema-language.md  03-session-protocol.md  04-security.md  05-market-data.md  06-clock-discipline.md  07-audit-and-halts.md  mgep-v1.0.md
schemas/: common.mgep  market_data.mgep  post_trade.mgep  quotes.mgep  risk.mgep  trading.mgep
src/rust/: Cargo.toml  build.rs  test_sizes.rs
src/rust/benches/: encode_decode.rs  full_stack.rs  vs_protobuf.rs
src/rust/examples/: client_server.rs  full_lifecycle.rs
src/rust/fuzz/: Cargo.toml
src/rust/fuzz/fuzz_targets/: fuzz_codec.rs  fuzz_decompress.rs  fuzz_dispatch.rs  fuzz_flex.rs
src/rust/src/: aesni.rs  async_server.rs  audit.rs  auth.rs  batch.rs  builder.rs  cancel_on_disconnect.rs  client_errors.rs  client_state.rs  clock_discipline.rs  codec.rs  compress.rs  connection.rs  core_macro.rs  correlation.rs  crypto.rs  crypto_session.rs  drop_copy.rs  entitlements.rs  error.rs  fix_gateway.rs  flex.rs  frame.rs  ha.rs  ha_replication.rs  header.rs  idempotency.rs  inspect.rs  kill_switch.rs  lib.rs  linux_ptp_probe.rs  messages.rs  metrics.rs  multicast.rs  multiplex.rs  orderbook.rs  pool.rs  rate_limit.rs  reactor.rs  replication.rs  (+10 more)
src/rust/src/codegen/: c_gen.rs  mod.rs  parser.rs  rust_gen.rs
src/rust/tests/: cross_language.rs  integration_exchange.rs  throughput.rs  wire_vectors.rs
(+2 files in other folders)
