[package]
name = "mgep-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
mgep = { path = ".." }

[[bin]]
name = "fuzz_dispatch"
path = "fuzz_targets/fuzz_dispatch.rs"
doc = false

[[bin]]
name = "fuzz_flex"
path = "fuzz_targets/fuzz_flex.rs"
doc = false

[[bin]]
name = "fuzz_codec"
path = "fuzz_targets/fuzz_codec.rs"
doc = false

[[bin]]
name = "fuzz_decompress"
path = "fuzz_targets/fuzz_decompress.rs"
doc = false
